[gd_scene load_steps=25 format=4 uid="uid://dp77yrlajyyd8"]

[ext_resource type="Script" uid="uid://b78tsoxqc0lp4" path="res://Scripts/andar_1.gd" id="1_8oj3v"]
[ext_resource type="Texture2D" uid="uid://cg0c5cdtkhu7j" path="res://Assets/Art/2D/Scenary/Inside_C.png" id="1_h52c2"]
[ext_resource type="Texture2D" uid="uid://c5hecunyam41u" path="res://Assets/Art/2D/Scenary/Inside_D.png" id="2_mexnn"]
[ext_resource type="Texture2D" uid="uid://3s4e0bdpx077" path="res://Assets/Art/2D/Scenary/Inside_E.png" id="3_541bc"]
[ext_resource type="Texture2D" uid="uid://dty3waq51v5th" path="res://Assets/Art/2D/Scenary/A5.png" id="4_gvric"]
[ext_resource type="Texture2D" uid="uid://bkeij15exb551" path="res://Assets/Art/2D/Scenary/A4.png" id="5_8oj3v"]
[ext_resource type="PackedScene" uid="uid://b6xc2jygq8vcu" path="res://Scenes/player.tscn" id="6_7n6ic"]
[ext_resource type="PackedScene" uid="uid://dxn6vqcl68ww2" path="res://Scenes/door_2d.tscn" id="7_541bc"]
[ext_resource type="Texture2D" uid="uid://cscfdctjndshc" path="res://Assets/Art/2D/Scenary/Sprite-0001.jpg" id="7_mexnn"]
[ext_resource type="PackedScene" uid="uid://dp4g7hpkpcgj" path="res://Scenes/fade_black.tscn" id="10_7n6ic"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8oj3v"]
texture = ExtResource("7_mexnn")
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_7n6ic"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_8oj3v")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fkb65"]
texture = ExtResource("1_h52c2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m2nrs"]
texture = ExtResource("2_mexnn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8ctvu"]
texture = ExtResource("3_541bc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ddg3"]
texture = ExtResource("4_gvric")
5:15/0 = 0
4:15/0 = 0
3:15/0 = 0
3:16/0 = 0
4:16/0 = 0
4:17/0 = 0
5:17/0 = 0
5:16/0 = 0
3:17/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i1n6f"]
texture = ExtResource("5_8oj3v")
12:24/0 = 0
12:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:24/0 = 0
13:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:24/0 = 0
14:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:24/0 = 0
15:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:24/0 = 0
16:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:24/0 = 0
17:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:25/0 = 0
17:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:25/0 = 0
16:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:25/0 = 0
15:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:25/0 = 0
14:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:25/0 = 0
13:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:25/0 = 0
12:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:26/0 = 0
12:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.09005, -8, 0.990957)
13:26/0 = 0
13:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.09005, -8, 0.990957)
14:26/0 = 0
14:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.09005, -8, 0.990957)
15:26/0 = 0
15:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.09005, -8, 0.990957)
16:26/0 = 0
16:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.09005, -8, 0.990957)
17:26/0 = 0
17:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.09005, -8, 0.990957)
17:27/0 = 0
16:27/0 = 0
15:27/0 = 0
14:27/0 = 0
13:27/0 = 0
12:27/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
17:29/0 = 0
16:29/0 = 0
15:29/0 = 0
14:29/0 = 0
13:29/0 = 0
12:29/0 = 0

[sub_resource type="TileSet" id="TileSet_7jcnt"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fkb65")
sources/1 = SubResource("TileSetAtlasSource_m2nrs")
sources/2 = SubResource("TileSetAtlasSource_8ctvu")
sources/3 = SubResource("TileSetAtlasSource_0ddg3")
sources/4 = SubResource("TileSetAtlasSource_i1n6f")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7o4pi"]
texture = ExtResource("5_8oj3v")
30:24/0 = 0
31:24/0 = 0
32:24/0 = 0
33:24/0 = 0
34:24/0 = 0
35:24/0 = 0
35:25/0 = 0
35:26/0 = 0
35:27/0 = 0
35:28/0 = 0
35:29/0 = 0
34:29/0 = 0
33:29/0 = 0
32:29/0 = 0
31:29/0 = 0
30:29/0 = 0
30:28/0 = 0
30:27/0 = 0
30:26/0 = 0
30:25/0 = 0
31:25/0 = 0
31:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
32:25/0 = 0
32:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
33:25/0 = 0
33:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
34:25/0 = 0
34:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
34:26/0 = 0
34:27/0 = 0
34:28/0 = 0
33:28/0 = 0
32:28/0 = 0
31:28/0 = 0
31:27/0 = 0
31:26/0 = 0
32:26/0 = 0
33:26/0 = 0
33:27/0 = 0
32:27/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3fwvj"]
texture = ExtResource("4_gvric")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ikmsk"]
texture = ExtResource("1_h52c2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uwvhk"]
texture = ExtResource("2_mexnn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ryjxp"]
texture = ExtResource("3_541bc")

[sub_resource type="TileSet" id="TileSet_1nsmu"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7o4pi")
sources/1 = SubResource("TileSetAtlasSource_3fwvj")
sources/2 = SubResource("TileSetAtlasSource_ikmsk")
sources/3 = SubResource("TileSetAtlasSource_uwvhk")
sources/4 = SubResource("TileSetAtlasSource_ryjxp")

[node name="Andar_1" type="Node2D"]
position = Vector2(1325, 242)
script = ExtResource("1_8oj3v")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AACr/+7/AAAAAAAAAACr/+//AAAAAAAAAACr//D/AAAAAAAAAACr//H/AAAAAAAAAACr//L/AAAAAAAAAACr//P/AAAAAAAAAACr//T/AAAAAAAAAACr//X/AAAAAAAAAACr//b/AAAAAAAAAACr//f/AAAAAAAAAACr//j/AAAAAAAAAACr//n/AAAAAAAAAACr//r/AAAAAAAAAACr//v/AAAAAAAAAACr//z/AAAAAAAAAACr//3/AAAAAAAAAACr//7/AAAAAAAAAACr////AAAAAAAAAACr/wAAAAAAAAAAAACr/wEAAAAAAAAAAACr/wIAAAAAAAAAAACr/wMAAAAAAAAAAACr/wQAAAAAAAAAAACr/wUAAAAAAAAAAACr/wYAAAAAAAAAAACr/wcAAAAAAAAAAACr/wgAAAAAAAAAAACr/wkAAAAAAAAAAACr/woAAAAAAAAAAACr/wsAAAAAAAAAAACr/wwAAAAAAAAAAACr/w0AAAAAAAAAAACr/w4AAAAAAAAAAACr/w8AAAAAAAAAAACr/xAAAAAAAAAAAACr/xEAAAAAAAAAAACr/xIAAAAAAAAAAACr/xMAAAAAAAAAAACr/xQAAAAAAAAAAACr/xUAAAAAAAAAAACr/xYAAAAAAAAAAACr/xcAAAAAAAAAAACr/xgAAAAAAAAAAACn/+7/AAAAAAAAAACn/+//AAAAAAAAAACn//D/AAAAAAAAAACn//H/AAAAAAAAAACn//L/AAAAAAAAAACn//P/AAAAAAAAAACn//T/AAAAAAAAAACn//X/AAAAAAAAAACn//b/AAAAAAAAAACn//f/AAAAAAAAAACn//j/AAAAAAAAAACn//n/AAAAAAAAAACn//r/AAAAAAAAAACn//v/AAAAAAAAAACn//z/AAAAAAAAAACn//3/AAAAAAAAAACn//7/AAAAAAAAAACn////AAAAAAAAAACn/wAAAAAAAAAAAACn/wEAAAAAAAAAAACn/wIAAAAAAAAAAACn/wMAAAAAAAAAAACn/wQAAAAAAAAAAACn/wUAAAAAAAAAAACn/wYAAAAAAAAAAACn/wcAAAAAAAAAAACn/wgAAAAAAAAAAACn/wkAAAAAAAAAAACn/woAAAAAAAAAAACn/wsAAAAAAAAAAACn/wwAAAAAAAAAAACn/w0AAAAAAAAAAACn/w4AAAAAAAAAAACn/w8AAAAAAAAAAACn/xAAAAAAAAAAAACn/xEAAAAAAAAAAACn/xIAAAAAAAAAAACn/xMAAAAAAAAAAACn/xQAAAAAAAAAAACn/xUAAAAAAAAAAACn/xYAAAAAAAAAAACn/xcAAAAAAAAAAACn/xgAAAAAAAAAAAA1AO7/AAAAAAAAAAA1AO//AAAAAAAAAAA1APD/AAAAAAAAAAA1APH/AAAAAAAAAAA1APL/AAAAAAAAAAA1APP/AAAAAAAAAAA1APT/AAAAAAAAAAA1APX/AAAAAAAAAAA1APb/AAAAAAAAAAA1APf/AAAAAAAAAAA1APj/AAAAAAAAAAA1APn/AAAAAAAAAAA1APr/AAAAAAAAAAA1APv/AAAAAAAAAAA1APz/AAAAAAAAAAA1AP3/AAAAAAAAAAA1AP7/AAAAAAAAAAA1AP//AAAAAAAAAAA1AAAAAAAAAAAAAAA1AAEAAAAAAAAAAAA1AAIAAAAAAAAAAAA1AAMAAAAAAAAAAAA1AAQAAAAAAAAAAAA1AAUAAAAAAAAAAAA1AAYAAAAAAAAAAAA1AAcAAAAAAAAAAAA1AAgAAAAAAAAAAAA1AAkAAAAAAAAAAAA1AAoAAAAAAAAAAAA1AAsAAAAAAAAAAAA1AAwAAAAAAAAAAAA1AA0AAAAAAAAAAAA1AA4AAAAAAAAAAAA1AA8AAAAAAAAAAAA1ABAAAAAAAAAAAAA1ABEAAAAAAAAAAAA1ABIAAAAAAAAAAAA1ABMAAAAAAAAAAAA1ABQAAAAAAAAAAAA1ABUAAAAAAAAAAAA1ABYAAAAAAAAAAAA1ABcAAAAAAAAAAAA1ABgAAAAAAAAAAAA5AO7/AAAAAAAAAAA5AO//AAAAAAAAAAA5APD/AAAAAAAAAAA5APH/AAAAAAAAAAA5APL/AAAAAAAAAAA5APP/AAAAAAAAAAA5APT/AAAAAAAAAAA5APX/AAAAAAAAAAA5APb/AAAAAAAAAAA5APf/AAAAAAAAAAA5APj/AAAAAAAAAAA5APn/AAAAAAAAAAA5APr/AAAAAAAAAAA5APv/AAAAAAAAAAA5APz/AAAAAAAAAAA5AP3/AAAAAAAAAAA5AP7/AAAAAAAAAAA5AP//AAAAAAAAAAA5AAAAAAAAAAAAAAA5AAEAAAAAAAAAAAA5AAIAAAAAAAAAAAA5AAMAAAAAAAAAAAA5AAQAAAAAAAAAAAA5AAUAAAAAAAAAAAA5AAYAAAAAAAAAAAA5AAcAAAAAAAAAAAA5AAgAAAAAAAAAAAA5AAkAAAAAAAAAAAA5AAoAAAAAAAAAAAA5AAsAAAAAAAAAAAA5AAwAAAAAAAAAAAA5AA0AAAAAAAAAAAA5AA4AAAAAAAAAAAA5AA8AAAAAAAAAAAA5ABAAAAAAAAAAAAA5ABEAAAAAAAAAAAA5ABIAAAAAAAAAAAA5ABMAAAAAAAAAAAA5ABQAAAAAAAAAAAA5ABUAAAAAAAAAAAA5ABYAAAAAAAAAAAA5ABcAAAAAAAAAAAA5ABgAAAAAAAAAAAA9AO7/AAAAAAAAAAA9AO//AAAAAAAAAAA9APD/AAAAAAAAAAA9APH/AAAAAAAAAAA9APL/AAAAAAAAAAA9APP/AAAAAAAAAAA9APT/AAAAAAAAAAA9APX/AAAAAAAAAAA9APb/AAAAAAAAAAA9APf/AAAAAAAAAAA9APj/AAAAAAAAAAA9APn/AAAAAAAAAAA9APr/AAAAAAAAAAA9APv/AAAAAAAAAAA9APz/AAAAAAAAAAA9AP3/AAAAAAAAAAA9AP7/AAAAAAAAAAA9AP//AAAAAAAAAAA9AAAAAAAAAAAAAAA9AAEAAAAAAAAAAAA9AAIAAAAAAAAAAAA9AAMAAAAAAAAAAAA9AAQAAAAAAAAAAAA9AAUAAAAAAAAAAAA9AAYAAAAAAAAAAAA9AAcAAAAAAAAAAAA9AAgAAAAAAAAAAAA9AAkAAAAAAAAAAAA9AAoAAAAAAAAAAAA9AAsAAAAAAAAAAAA9AAwAAAAAAAAAAAA9AA0AAAAAAAAAAAA9AA4AAAAAAAAAAAA9AA8AAAAAAAAAAAA9ABAAAAAAAAAAAAA9ABEAAAAAAAAAAAA9ABIAAAAAAAAAAAA9ABMAAAAAAAAAAAA9ABQAAAAAAAAAAAA9ABUAAAAAAAAAAAA9ABYAAAAAAAAAAAA9ABcAAAAAAAAAAAA9ABgAAAAAAAAAAABBAO7/AAAAAAAAAABBAO//AAAAAAAAAABBAPD/AAAAAAAAAABBAPH/AAAAAAAAAABBAPL/AAAAAAAAAABBAPP/AAAAAAAAAABBAPT/AAAAAAAAAABBAPX/AAAAAAAAAABBAPb/AAAAAAAAAABBAPf/AAAAAAAAAABBAPj/AAAAAAAAAABBAPn/AAAAAAAAAABBAPr/AAAAAAAAAABBAPv/AAAAAAAAAABBAPz/AAAAAAAAAABBAP3/AAAAAAAAAABBAP7/AAAAAAAAAABBAP//AAAAAAAAAABBAAAAAAAAAAAAAABBAAEAAAAAAAAAAABBAAIAAAAAAAAAAABBAAMAAAAAAAAAAABBAAQAAAAAAAAAAABBAAUAAAAAAAAAAABBAAYAAAAAAAAAAABBAAcAAAAAAAAAAABBAAgAAAAAAAAAAABBAAkAAAAAAAAAAABBAAoAAAAAAAAAAABBAAsAAAAAAAAAAABBAAwAAAAAAAAAAABBAA0AAAAAAAAAAABBAA4AAAAAAAAAAABBAA8AAAAAAAAAAABBABAAAAAAAAAAAABBABEAAAAAAAAAAABBABIAAAAAAAAAAABBABMAAAAAAAAAAABBABQAAAAAAAAAAABBABUAAAAAAAAAAABBABYAAAAAAAAAAABBABcAAAAAAAAAAABBABgAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_7n6ic")

[node name="Floor_Wall" type="TileMapLayer" parent="."]
modulate = Color(0.688595, 0.688595, 0.688595, 1)
position = Vector2(-5, -2)
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AAAAAAAAAwADAA8AAAABAAAAAwAEAA8AAAACAAAAAwAFAA8AAAADAAAAAwADAA8AAAAEAAAAAwAEAA8AAAAFAAAAAwAFAA8AAAAGAAAAAwADAA8AAAAHAAAAAwAEAA8AAAAIAAAAAwAFAA8AAAAJAAAAAwADAA8AAAAKAAAAAwAEAA8AAAALAAAAAwAFAA8AAAAMAAAAAwADAA8AAAANAAAAAwAEAA8AAAAOAAAAAwAFAA8AAAAPAAAAAwADAA8AAAAQAAAAAwAEAA8AAAARAAAAAwAFAA8AAAASAAAAAwADAA8AAAATAAAAAwAEAA8AAAAUAAAAAwAFAA8AAAD//wAAAwAFAA8AAAD+/wAAAwAEAA8AAAD9/wAAAwADAA8AAAD8/wAAAwAFAA8AAAD7/wAAAwAEAA8AAAD6/wAAAwADAA8AAAD5/wAAAwAFAA8AAAD4/wAAAwAEAA8AAAD3/wAAAwADAA8AAAD2/wAAAwAFAA8AAAD1/wAAAwAEAA8AAAD0/wAAAwADAA8AAADz/wAAAwAFAA8AAADy/wAAAwAEAA8AAADx/wAAAwADAA8AAADw/wAAAwAFAA8AAADv/wAAAwAEAA8AAADu/wAAAwADAA8AAADt/wAAAwAFAA8AAADs/wAAAwAEAA8AAADr/wAAAwADAA8AAADq/wAAAwAFAA8AAADp/wAAAwAEAA8AAADo/wAAAwADAA8AAADn/wAAAwAFAA8AAADm/wAAAwAEAA8AAADl/wAAAwADAA8AAADk/wAAAwAFAA8AAADj/wAAAwAEAA8AAADi/wAAAwADAA8AAADh/wAAAwAFAA8AAADg/wAAAwAEAA8AAADf/wAAAwADAA8AAADw/wIAAwAFABEAAADw/wEAAwAFABAAAADv/wEAAwAEABAAAADu/wEAAwADABAAAADt/wEAAwAFABAAAADs/wEAAwAEABAAAADr/wEAAwADABAAAADq/wEAAwAFABAAAADp/wEAAwAEABAAAADo/wEAAwADABAAAADn/wEAAwAFABAAAADm/wEAAwAEABAAAADl/wEAAwADABAAAADk/wEAAwAFABAAAADj/wEAAwAEABAAAADi/wEAAwADABAAAADh/wEAAwAFABAAAADg/wEAAwAEABAAAADf/wEAAwADABAAAADf/wIAAwADABEAAADg/wIAAwAEABEAAADh/wIAAwAFABEAAADi/wIAAwADABEAAADj/wIAAwAEABEAAADk/wIAAwAFABEAAADl/wIAAwADABEAAADm/wIAAwAEABEAAADn/wIAAwAFABEAAADo/wIAAwADABEAAADp/wIAAwAEABEAAADq/wIAAwAFABEAAADr/wIAAwADABEAAADs/wIAAwAEABEAAADt/wIAAwAFABEAAADu/wIAAwADABEAAADv/wIAAwAEABEAAADx/wIAAwADABEAAADx/wEAAwADABAAAADy/wEAAwAEABAAAADy/wIAAwAEABEAAADz/wIAAwAFABEAAADz/wEAAwAFABAAAAD0/wEAAwADABAAAAD0/wIAAwADABEAAAD1/wIAAwAEABEAAAD1/wEAAwAEABAAAAD2/wEAAwAFABAAAAD2/wIAAwAFABEAAAD3/wIAAwADABEAAAD3/wEAAwADABAAAAD4/wEAAwAEABAAAAD4/wIAAwAEABEAAAD5/wIAAwAFABEAAAD5/wEAAwAFABAAAAD6/wEAAwADABAAAAD6/wIAAwADABEAAAD7/wIAAwAEABEAAAD7/wEAAwAEABAAAAD8/wEAAwAFABAAAAD8/wIAAwAFABEAAAD9/wIAAwADABEAAAD9/wEAAwADABAAAAD+/wEAAwAEABAAAAD+/wIAAwAEABEAAAD//wIAAwAFABEAAAD//wEAAwAFABAAAAAAAAEAAwADABAAAAAAAAIAAwADABEAAAABAAIAAwAEABEAAAABAAEAAwAEABAAAAACAAEAAwAFABAAAAACAAIAAwAFABEAAAADAAIAAwADABEAAAADAAEAAwADABAAAAAEAAEAAwAEABAAAAAEAAIAAwAEABEAAAAFAAIAAwAFABEAAAAFAAEAAwAFABAAAAAGAAEAAwADABAAAAAGAAIAAwADABEAAAAHAAIAAwAEABEAAAAHAAEAAwAEABAAAAAIAAEAAwAFABAAAAAIAAIAAwAFABEAAAAJAAIAAwADABEAAAAJAAEAAwADABAAAAAKAAEAAwAEABAAAAAKAAIAAwAEABEAAAALAAIAAwAFABEAAAALAAEAAwAFABAAAAAMAAEAAwADABAAAAAMAAIAAwADABEAAAANAAIAAwAEABEAAAANAAEAAwAEABAAAAAOAAEAAwAFABAAAAAOAAIAAwAFABEAAAAPAAIAAwADABEAAAAPAAEAAwADABAAAAAQAAEAAwAEABAAAAAQAAIAAwAEABEAAAARAAIAAwAFABEAAAARAAEAAwAFABAAAAASAAEAAwADABAAAAASAAIAAwADABEAAAATAAIAAwAEABEAAAATAAEAAwAEABAAAAAUAAEAAwAFABAAAAAUAAIAAwAFABEAAADf//r/BAAPABgAAADf//v/BAAPABkAAADf//z/BAAPABoAAADf//3/BAAPABsAAADf//7/BAAPABwAAADf////BAAPAB0AAADg//r/BAAQABgAAADg//v/BAAQABkAAADg//z/BAAQABoAAADg//3/BAAQABsAAADg//7/BAAQABwAAADg////BAAQAB0AAADh//r/BAARABgAAADh//v/BAARABkAAADh//z/BAARABoAAADh//3/BAARABsAAADh//7/BAARABwAAADh////BAARAB0AAADi//r/BAAMABgAAADi//v/BAAMABkAAADi//z/BAAMABoAAADi//3/BAAMABsAAADi//7/BAAMABwAAADi////BAAMAB0AAADj//r/BAANABgAAADj//v/BAANABkAAADj//z/BAANABoAAADj//3/BAANABsAAADj//7/BAANABwAAADj////BAANAB0AAADk//r/BAAOABgAAADk//v/BAAOABkAAADk//z/BAAOABoAAADk//3/BAAOABsAAADk//7/BAAOABwAAADk////BAAOAB0AAADl//r/BAAPABgAAADl//v/BAAPABkAAADl//z/BAAPABoAAADl//3/BAAPABsAAADl//7/BAAPABwAAADl////BAAPAB0AAADm//r/BAAQABgAAADm//v/BAAQABkAAADm//z/BAAQABoAAADm//3/BAAQABsAAADm//7/BAAQABwAAADm////BAAQAB0AAADn//r/BAARABgAAADn//v/BAARABkAAADn//z/BAARABoAAADn//3/BAARABsAAADn//7/BAARABwAAADn////BAARAB0AAADo//r/BAAMABgAAADo//v/BAAMABkAAADo//z/BAAMABoAAADo//3/BAAMABsAAADo//7/BAAMABwAAADo////BAAMAB0AAADp//r/BAANABgAAADp//v/BAANABkAAADp//z/BAANABoAAADp//3/BAANABsAAADp//7/BAANABwAAADp////BAANAB0AAADq//r/BAAOABgAAADq//v/BAAOABkAAADq//z/BAAOABoAAADq//3/BAAOABsAAADq//7/BAAOABwAAADq////BAAOAB0AAADr//r/BAAPABgAAADr//v/BAAPABkAAADr//z/BAAPABoAAADr//3/BAAPABsAAADr//7/BAAPABwAAADr////BAAPAB0AAADs//r/BAAQABgAAADs//v/BAAQABkAAADs//z/BAAQABoAAADs//3/BAAQABsAAADs//7/BAAQABwAAADs////BAAQAB0AAADt//r/BAARABgAAADt//v/BAARABkAAADt//z/BAARABoAAADt//3/BAARABsAAADt//7/BAARABwAAADt////BAARAB0AAADu//r/BAAMABgAAADu//v/BAAMABkAAADu//z/BAAMABoAAADu//3/BAAMABsAAADu//7/BAAMABwAAADu////BAAMAB0AAADv//r/BAANABgAAADv//v/BAANABkAAADv//z/BAANABoAAADv//3/BAANABsAAADv//7/BAANABwAAADv////BAANAB0AAADw//r/BAAOABgAAADw//v/BAAOABkAAADw//z/BAAOABoAAADw//3/BAAOABsAAADw//7/BAAOABwAAADw////BAAOAB0AAADx//r/BAAPABgAAADx//v/BAAPABkAAADx//z/BAAPABoAAADx//3/BAAPABsAAADx//7/BAAPABwAAADx////BAAPAB0AAADy//r/BAAQABgAAADy//v/BAAQABkAAADy//z/BAAQABoAAADy//3/BAAQABsAAADy//7/BAAQABwAAADy////BAAQAB0AAADz//r/BAARABgAAADz//v/BAARABkAAADz//z/BAARABoAAADz//3/BAARABsAAADz//7/BAARABwAAADz////BAARAB0AAAD0//r/BAAMABgAAAD0//v/BAAMABkAAAD0//z/BAAMABoAAAD0//3/BAAMABsAAAD0//7/BAAMABwAAAD0////BAAMAB0AAAD1//r/BAANABgAAAD1//v/BAANABkAAAD1//z/BAANABoAAAD1//3/BAANABsAAAD1//7/BAANABwAAAD1////BAANAB0AAAD2//r/BAAOABgAAAD2//v/BAAOABkAAAD2//z/BAAOABoAAAD2//3/BAAOABsAAAD2//7/BAAOABwAAAD2////BAAOAB0AAAD3//r/BAAPABgAAAD3//v/BAAPABkAAAD3//z/BAAPABoAAAD3//3/BAAPABsAAAD3//7/BAAPABwAAAD3////BAAPAB0AAAD4//r/BAAQABgAAAD4//v/BAAQABkAAAD4//z/BAAQABoAAAD4//3/BAAQABsAAAD4//7/BAAQABwAAAD4////BAAQAB0AAAD5//r/BAARABgAAAD5//v/BAARABkAAAD5//z/BAARABoAAAD5//3/BAARABsAAAD5//7/BAARABwAAAD5////BAARAB0AAAD6//r/BAAMABgAAAD6//v/BAAMABkAAAD6//z/BAAMABoAAAD6//3/BAAMABsAAAD6//7/BAAMABwAAAD6////BAAMAB0AAAD7//r/BAANABgAAAD7//v/BAANABkAAAD7//z/BAANABoAAAD7//3/BAANABsAAAD7//7/BAANABwAAAD7////BAANAB0AAAD8//r/BAAOABgAAAD8//v/BAAOABkAAAD8//z/BAAOABoAAAD8//3/BAAOABsAAAD8//7/BAAOABwAAAD8////BAAOAB0AAAD9//r/BAAPABgAAAD9//v/BAAPABkAAAD9//z/BAAPABoAAAD9//3/BAAPABsAAAD9//7/BAAPABwAAAD9////BAAPAB0AAAD+//r/BAAQABgAAAD+//v/BAAQABkAAAD+//z/BAAQABoAAAD+//3/BAAQABsAAAD+//7/BAAQABwAAAD+////BAAQAB0AAAD///r/BAARABgAAAD///v/BAARABkAAAD///z/BAARABoAAAD///3/BAARABsAAAD///7/BAARABwAAAD/////BAARAB0AAAAAAPr/BAAMABgAAAAAAPv/BAAMABkAAAAAAPz/BAAMABoAAAAAAP3/BAAMABsAAAAAAP7/BAAMABwAAAAAAP//BAAMAB0AAAABAPr/BAANABgAAAABAPv/BAANABkAAAABAPz/BAANABoAAAABAP3/BAANABsAAAABAP7/BAANABwAAAABAP//BAANAB0AAAACAPr/BAAOABgAAAACAPv/BAAOABkAAAACAPz/BAAOABoAAAACAP3/BAAOABsAAAACAP7/BAAOABwAAAACAP//BAAOAB0AAAADAPr/BAAPABgAAAADAPv/BAAPABkAAAADAPz/BAAPABoAAAADAP3/BAAPABsAAAADAP7/BAAPABwAAAADAP//BAAPAB0AAAAEAPr/BAAQABgAAAAEAPv/BAAQABkAAAAEAPz/BAAQABoAAAAEAP3/BAAQABsAAAAEAP7/BAAQABwAAAAEAP//BAAQAB0AAAAFAPr/BAARABgAAAAFAPv/BAARABkAAAAFAPz/BAARABoAAAAFAP3/BAARABsAAAAFAP7/BAARABwAAAAFAP//BAARAB0AAAAGAPr/BAAMABgAAAAGAPv/BAAMABkAAAAGAPz/BAAMABoAAAAGAP3/BAAMABsAAAAGAP7/BAAMABwAAAAGAP//BAAMAB0AAAAHAPr/BAANABgAAAAHAPv/BAANABkAAAAHAPz/BAANABoAAAAHAP3/BAANABsAAAAHAP7/BAANABwAAAAHAP//BAANAB0AAAAIAPr/BAAOABgAAAAIAPv/BAAOABkAAAAIAPz/BAAOABoAAAAIAP3/BAAOABsAAAAIAP7/BAAOABwAAAAIAP//BAAOAB0AAAAJAPr/BAAPABgAAAAJAPv/BAAPABkAAAAJAPz/BAAPABoAAAAJAP3/BAAPABsAAAAJAP7/BAAPABwAAAAJAP//BAAPAB0AAAAKAPr/BAAQABgAAAAKAPv/BAAQABkAAAAKAPz/BAAQABoAAAAKAP3/BAAQABsAAAAKAP7/BAAQABwAAAAKAP//BAAQAB0AAAALAPr/BAARABgAAAALAPv/BAARABkAAAALAPz/BAARABoAAAALAP3/BAARABsAAAALAP7/BAARABwAAAALAP//BAARAB0AAAAMAPr/BAAMABgAAAAMAPv/BAAMABkAAAAMAPz/BAAMABoAAAAMAP3/BAAMABsAAAAMAP7/BAAMABwAAAAMAP//BAAMAB0AAAANAPr/BAANABgAAAANAPv/BAANABkAAAANAPz/BAANABoAAAANAP3/BAANABsAAAANAP7/BAANABwAAAANAP//BAANAB0AAAAOAPr/BAAOABgAAAAOAPv/BAAOABkAAAAOAPz/BAAOABoAAAAOAP3/BAAOABsAAAAOAP7/BAAOABwAAAAOAP//BAAOAB0AAAAPAPr/BAAPABgAAAAPAPv/BAAPABkAAAAPAPz/BAAPABoAAAAPAP3/BAAPABsAAAAPAP7/BAAPABwAAAAPAP//BAAPAB0AAAAQAPr/BAAQABgAAAAQAPv/BAAQABkAAAAQAPz/BAAQABoAAAAQAP3/BAAQABsAAAAQAP7/BAAQABwAAAAQAP//BAAQAB0AAAARAPr/BAARABgAAAARAPv/BAARABkAAAARAPz/BAARABoAAAARAP3/BAARABsAAAARAP7/BAARABwAAAARAP//BAARAB0AAAASAPr/BAAMABgAAAASAPv/BAAMABkAAAASAPz/BAAMABoAAAASAP3/BAAMABsAAAASAP7/BAAMABwAAAASAP//BAAMAB0AAAATAPr/BAANABgAAAATAPv/BAANABkAAAATAPz/BAANABoAAAATAP3/BAANABsAAAATAP7/BAANABwAAAATAP//BAANAB0AAAAUAPr/BAAOABgAAAAUAPv/BAAOABkAAAAUAPz/BAAOABoAAAAUAP3/BAAOABsAAAAUAP7/BAAOABwAAAAUAP//BAAOAB0AAAA=")
tile_set = SubResource("TileSet_7jcnt")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
z_index = 1
position = Vector2(-5, -2)
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AADf/wMAAAAfABkAAADf/wQAAAAfABoAAADg/wMAAAAgABkAAADg/wQAAAAgABoAAADh/wMAAAAhABkAAADh/wQAAAAhABoAAADi/wMAAAAiABkAAADi/wQAAAAiABoAAADj/wMAAAAfABkAAADj/wQAAAAfABoAAADk/wMAAAAgABkAAADk/wQAAAAgABoAAADl/wMAAAAhABkAAADl/wQAAAAhABoAAADm/wMAAAAiABkAAADm/wQAAAAiABoAAADn/wMAAAAfABkAAADn/wQAAAAfABoAAADo/wMAAAAgABkAAADo/wQAAAAgABoAAADp/wMAAAAhABkAAADp/wQAAAAhABoAAADq/wMAAAAiABkAAADq/wQAAAAiABoAAADr/wMAAAAfABkAAADr/wQAAAAfABoAAADs/wMAAAAgABkAAADs/wQAAAAgABoAAADt/wMAAAAhABkAAADt/wQAAAAhABoAAADu/wMAAAAiABkAAADu/wQAAAAiABoAAADv/wMAAAAfABkAAADv/wQAAAAfABoAAADw/wMAAAAgABkAAADw/wQAAAAgABoAAADx/wMAAAAhABkAAADx/wQAAAAhABoAAADy/wMAAAAiABkAAADy/wQAAAAiABoAAADz/wMAAAAfABkAAADz/wQAAAAfABoAAAD0/wMAAAAgABkAAAD0/wQAAAAgABoAAAD1/wMAAAAhABkAAAD1/wQAAAAhABoAAAD2/wMAAAAiABkAAAD2/wQAAAAiABoAAAD3/wMAAAAfABkAAAD3/wQAAAAfABoAAAD4/wMAAAAgABkAAAD4/wQAAAAgABoAAAD6/wMAAAAiABkAAAD6/wQAAAAiABoAAAD7/wMAAAAfABkAAAD7/wQAAAAfABoAAAD8/wMAAAAgABkAAAD8/wQAAAAgABoAAAD9/wMAAAAhABkAAAD9/wQAAAAhABoAAAD+/wMAAAAiABkAAAD+/wQAAAAiABoAAAD//wMAAAAfABkAAAD//wQAAAAfABoAAAAAAAMAAAAgABkAAAAAAAQAAAAgABoAAAABAAMAAAAhABkAAAABAAQAAAAhABoAAAACAAMAAAAiABkAAAACAAQAAAAiABoAAAADAAMAAAAfABkAAAADAAQAAAAfABoAAAAEAAMAAAAgABkAAAAEAAQAAAAgABoAAAAFAAMAAAAhABkAAAAFAAQAAAAhABoAAAAGAAMAAAAiABkAAAAGAAQAAAAiABoAAAAHAAMAAAAfABkAAAAHAAQAAAAfABoAAAAIAAMAAAAgABkAAAAIAAQAAAAgABoAAAAJAAMAAAAhABkAAAAJAAQAAAAhABoAAAAKAAMAAAAiABkAAAAKAAQAAAAiABoAAAALAAMAAAAfABkAAAALAAQAAAAfABoAAAAMAAMAAAAgABkAAAAMAAQAAAAgABoAAAANAAMAAAAhABkAAAANAAQAAAAhABoAAAAOAAMAAAAiABkAAAAOAAQAAAAiABoAAAAPAAMAAAAfABkAAAAPAAQAAAAfABoAAAAQAAMAAAAgABkAAAAQAAQAAAAgABoAAAARAAMAAAAhABkAAAARAAQAAAAhABoAAAASAAMAAAAiABkAAAASAAQAAAAiABoAAAATAAMAAAAfABkAAAATAAQAAAAfABoAAAAUAAMAAAAgABkAAAAUAAQAAAAgABoAAADf/wIAAAAfABgAAADg/wIAAAAgABgAAADh/wIAAAAhABgAAADi/wIAAAAiABgAAADj/wIAAAAfABgAAADk/wIAAAAgABgAAADl/wIAAAAhABgAAADm/wIAAAAiABgAAADn/wIAAAAfABgAAADo/wIAAAAgABgAAADp/wIAAAAhABgAAADq/wIAAAAiABgAAADr/wIAAAAfABgAAADs/wIAAAAgABgAAADt/wIAAAAhABgAAADu/wIAAAAiABgAAADv/wIAAAAfABgAAADw/wIAAAAgABgAAADx/wIAAAAhABgAAADy/wIAAAAiABgAAADz/wIAAAAfABgAAAD0/wIAAAAgABgAAAD1/wIAAAAhABgAAAD2/wIAAAAiABgAAAD3/wIAAAAfABgAAAD4/wIAAAAgABgAAAD6/wIAAAAiABgAAAD7/wIAAAAfABgAAAD8/wIAAAAgABgAAAD9/wIAAAAhABgAAAD+/wIAAAAiABgAAAD//wIAAAAfABgAAAAAAAIAAAAgABgAAAABAAIAAAAhABgAAAACAAIAAAAiABgAAAADAAIAAAAfABgAAAAEAAIAAAAgABgAAAAFAAIAAAAhABgAAAAGAAIAAAAiABgAAAAHAAIAAAAfABgAAAAIAAIAAAAgABgAAAAJAAIAAAAhABgAAAAKAAIAAAAiABgAAAALAAIAAAAfABgAAAAMAAIAAAAgABgAAAANAAIAAAAhABgAAAAOAAIAAAAiABgAAAAPAAIAAAAfABgAAAAQAAIAAAAgABgAAAARAAIAAAAhABgAAAASAAIAAAAiABgAAAATAAIAAAAfABgAAAAUAAIAAAAgABgAAADf//r/AAAfABgAACDg//r/AAAgABgAACDh//r/AAAhABgAACDi//r/AAAiABgAACDj//r/AAAfABgAACDk//r/AAAgABgAACDl//r/AAAhABgAACDm//r/AAAiABgAACDn//r/AAAfABgAACDo//r/AAAgABgAACDp//r/AAAhABgAACDq//r/AAAiABgAACDr//r/AAAfABgAACDs//r/AAAgABgAACDt//r/AAAhABgAACDu//r/AAAiABgAACDv//r/AAAfABgAACDw//r/AAAgABgAACDx//r/AAAhABgAACDy//r/AAAiABgAACDz//r/AAAfABgAACD0//r/AAAgABgAACD1//r/AAAhABgAACD2//r/AAAiABgAACD3//r/AAAfABgAACD4//r/AAAgABgAACD5//r/AAAhABgAACD6//r/AAAiABgAACD7//r/AAAfABgAACD8//r/AAAgABgAACD9//r/AAAhABgAACD///r/AAAfABgAACAAAPr/AAAgABgAACABAPr/AAAhABgAACACAPr/AAAiABgAACADAPr/AAAfABgAACAEAPr/AAAgABgAACAFAPr/AAAhABgAACAGAPr/AAAiABgAACAHAPr/AAAfABgAACAIAPr/AAAgABgAACAJAPr/AAAhABgAACAKAPr/AAAiABgAACALAPr/AAAfABgAACAMAPr/AAAgABgAACANAPr/AAAhABgAACAOAPr/AAAiABgAACAPAPr/AAAfABgAACAQAPr/AAAgABgAACARAPr/AAAhABgAACASAPr/AAAiABgAACATAPr/AAAfABgAACAUAPr/AAAgABgAACDf/wUAAAAfABsAAADg/wUAAAAgABsAAADh/wUAAAAhABsAAADi/wUAAAAiABsAAADj/wUAAAAfABsAAADk/wUAAAAgABsAAADl/wUAAAAhABsAAADm/wUAAAAiABsAAADn/wUAAAAfABsAAADo/wUAAAAgABsAAADp/wUAAAAhABsAAADq/wUAAAAiABsAAADr/wUAAAAfABsAAADs/wUAAAAgABsAAADt/wUAAAAhABsAAADu/wUAAAAiABsAAADv/wUAAAAfABsAAADw/wUAAAAgABsAAADx/wUAAAAhABsAAADy/wUAAAAiABsAAADz/wUAAAAfABsAAAD0/wUAAAAgABsAAAD1/wUAAAAhABsAAAD2/wUAAAAiABsAAAD3/wUAAAAfABsAAAD4/wUAAAAgABsAAAD6/wUAAAAiABsAAAD7/wUAAAAfABsAAAD8/wUAAAAgABsAAAD9/wUAAAAhABsAAAD+/wUAAAAiABsAAAD//wUAAAAfABsAAAAAAAUAAAAgABsAAAABAAUAAAAhABsAAAACAAUAAAAiABsAAAADAAUAAAAfABsAAAAEAAUAAAAgABsAAAAFAAUAAAAhABsAAAAGAAUAAAAiABsAAAAHAAUAAAAfABsAAAAIAAUAAAAgABsAAAAJAAUAAAAhABsAAAAKAAUAAAAiABsAAAALAAUAAAAfABsAAAAMAAUAAAAgABsAAAANAAUAAAAhABsAAAAOAAUAAAAiABsAAAAPAAUAAAAfABsAAAAQAAUAAAAgABsAAAARAAUAAAAhABsAAAASAAUAAAAiABsAAAATAAUAAAAfABsAAAAUAAUAAAAgABsAAAD5/wIAAAAhABgAAAD5/wMAAAAhABkAAAD5/wQAAAAhABoAAAD5/wUAAAAhABsAAAD+//r/AAAiABgAACA=")
tile_set = SubResource("TileSet_1nsmu")

[node name="door_2D" parent="." groups=["doors_2d"] instance=ExtResource("7_541bc")]
position = Vector2(-885, -114)
scale = Vector2(2.35, 2.35)
door_id = 1

[node name="door_2D2" parent="." groups=["doors_2d"] instance=ExtResource("7_541bc")]
position = Vector2(-317, -114)
scale = Vector2(2.35, 2.35)
door_id = 2

[node name="door_2D3" parent="." groups=["doors_2d"] instance=ExtResource("7_541bc")]
position = Vector2(291, -114)
scale = Vector2(2.35, 2.35)
door_id = 3

[node name="Sprite-0001" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-249, -66)
scale = Vector2(38.625, 14.5)
texture = ExtResource("7_mexnn")

[node name="Player" parent="." instance=ExtResource("6_7n6ic")]
position = Vector2(-1181, -18)
scale = Vector2(1.2, 1.2)

[node name="CanvasLayer" parent="." instance=ExtResource("10_7n6ic")]
unique_name_in_owner = true
visible = false
